--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.7",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
+    "i": "^0.3.7",
+    "npm": "^8.18.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-ratings": "^8.1.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "^3.16.0",
+    "react-native-swiper-flatlist": "^3.0.17",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-native-vector-icons": "^6.4.11",
+    "prop-types": "^15.8.1",
     "typescript": "~4.3.5"
   },
   "private": true
